--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
         <spock.version>0.7-groovy-2.0</spock.version>
         <jersey.version>1.15</jersey.version>
         <jaxrs.version>1.1.1</jaxrs.version>
+        <springsecurity.version>3.1.3.RELEASE</springsecurity.version>
     </properties>
 
     <reporting>
@@ -406,6 +407,12 @@
                     <artifactId>spring-aop</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-cas</artifactId>
+            <version>${springsecurity.version}</version>
         </dependency>
 		
         <!-- Dependencies for testing -->
