--- a/pom.xml
+++ b/pom.xml
@@ -66,8 +66,7 @@
     <properties>
         <github.global.server>github</github.global.server>
         <jdk.version>1.6</jdk.version>
-        <cas.version>3.5.1</cas.version>
-        <cas.client.version>3.2.1</cas.client.version>
+        <cas.version>3.5.1</cas.version>        
         <servlet.version>2.5</servlet.version>
         <junit.version>4.10</junit.version>
         <jackson.version>2.1.0</jackson.version>
@@ -163,6 +162,42 @@
                     <target>${jdk.version}</target>
                 </configuration>
             </plugin>
+
+            <!-- Plugin to run Spock tests -->
+            <plugin>
+                <groupId>org.codehaus.gmaven</groupId>
+                <artifactId>gmaven-plugin</artifactId>
+                <version>1.3</version>
+                <configuration>
+                    <providerSelection>1.7</providerSelection>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.codehaus.gmaven.runtime</groupId>
+                        <artifactId>gmaven-runtime-1.7</artifactId>
+                        <version>1.3</version>
+                        <exclusions>
+                            <exclusion>
+                                <groupId>org.codehaus.groovy</groupId>
+                                <artifactId>groovy-all</artifactId>
+                            </exclusion>
+                        </exclusions>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.codehaus.groovy</groupId>
+                        <artifactId>groovy-all</artifactId>
+                        <version>2.0.6</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -296,12 +331,6 @@
             <artifactId>servlet-api</artifactId>
             <version>${servlet.version}</version>
             <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jasig.cas.client</groupId>
-            <artifactId>cas-client-core</artifactId>
-            <version>${cas.client.version}</version>
         </dependency>
 
         <dependency>
