Update pom dependencies to the latest versions; Prepare for 1.1 release

--- a/pom.xml
+++ b/pom.xml
@@ -68,17 +68,17 @@
         <jdk.version>1.6</jdk.version>
         <cas.version>3.5.1</cas.version>        
         <servlet.version>2.5</servlet.version>
-        <junit.version>4.10</junit.version>
-        <jackson.version>2.1.0</jackson.version>
-        <commons-codec.version>1.6</commons-codec.version>
+        <junit.version>4.11</junit.version>
+        <jackson.version>2.1.2</jackson.version>
+        <commons-codec.version>1.7</commons-codec.version>
         <person.directory.version>1.5.1</person.directory.version>
         <shiro.version>1.2.1</shiro.version>
-        <slf4j.version>1.6.6</slf4j.version>
-        <grouper.client.version>2.1.0</grouper.client.version>
-        <stormpath.sdk.version>0.4.1</stormpath.sdk.version>
+        <slf4j.version>1.7.2</slf4j.version>
+        <grouper.client.version>2.1.2-SNAPSHOT</grouper.client.version>
+        <stormpath.sdk.version>0.6.0</stormpath.sdk.version>
         <spring.data.mongo.version>1.0.3.RELEASE</spring.data.mongo.version>
         <spock.version>0.7-groovy-2.0</spock.version>
-        <jersey.version>1.15</jersey.version>
+        <jersey.version>1.16</jersey.version>
         <jaxrs.version>1.1.1</jaxrs.version>
         <springsecurity.version>3.1.3.RELEASE</springsecurity.version>
     </properties>
