--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
         <person.directory.version>1.5.1</person.directory.version>
         <shiro.version>1.2.1</shiro.version>
         <slf4j.version>1.7.2</slf4j.version>
-        <grouper.client.version>2.1.2-SNAPSHOT</grouper.client.version>
+        <grouper.client.version>2.1.0</grouper.client.version>
         <stormpath.sdk.version>0.6.0</stormpath.sdk.version>
         <spring.data.mongo.version>1.0.3.RELEASE</spring.data.mongo.version>
         <spock.version>0.7-groovy-2.0</spock.version>
