--- a/pom.xml
+++ b/pom.xml
@@ -458,6 +458,13 @@
             <version>${spock.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis</artifactId>
+            <version>1.4.01</version>
+            <scope>test</scope>
+        </dependency>
         
     </dependencies>
 
