--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
         <jersey.version>1.16</jersey.version>
         <jaxrs.version>1.1.1</jaxrs.version>
         <springsecurity.version>3.1.3.RELEASE</springsecurity.version>
+        <spring.version>3.2.2.RELEASE</spring.version>
     </properties>
 
     <reporting>
@@ -467,6 +468,12 @@
             <artifactId>xml-apis</artifactId>
             <version>1.4.01</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
         </dependency>
         
     </dependencies>
