Preparing for 1.3 release

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <url>http://unicon.net</url>
     </organization>
 
-    <url>http://unicon.github.com/cas-addons/</url>
+    <url>http://unicon.github.io/cas-addons/</url>
 
     <licenses>
         <license>
