--- a/pom.xml
+++ b/pom.xml
@@ -457,6 +457,13 @@
             <artifactId>spring-security-cas</artifactId>
             <version>${springsecurity.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>2.1.3</version>
+            <scope>compile</scope>
+        </dependency>
 		
         <!-- Dependencies for testing -->
         <dependency>
