Refactor the default values of config-file attribute in json-services-registry and json-attribute-repository to honor property placeholder values first

--- a/src/test/resources/net/unicon/cas/addons/config/person-attributes.conf
+++ b/src/test/resources/net/unicon/cas/addons/config/person-attributes.conf
@@ -16,7 +16,7 @@
 		"lastName":["Three"],
 		"eduPersonAffiliation":["alumni", "student", "employee", "some other attr"]
 	},
-	"test":{
+	"test-inside-classpath":{
 		"LNUMBER":["L12345678"]		
 	}	
 }
