--- a/src/test/resources/net/unicon/cas/addons/config/servicesRegistry.conf
+++ b/src/test/resources/net/unicon/cas/addons/config/servicesRegistry.conf
@@ -3,19 +3,26 @@
         {
             "id":1,
             "serviceId":"https://**",
-            "name":"HTTPS",            
-			"ignoreAttributes":true,
-			"enabled":true,
-			"extraAttributes": {
-				"initiateSSO":true
-			}            
+            "name":"HTTPS",
+            "ignoreAttributes":true,
+            "enabled":true,
+            "extraAttributes": {
+                "initiateSSO":true
+            }
+        },
+        {
+            "id":2,
+            "serviceId":"^http://example.com",
+            "name":"Regex",
+            "ignoreAttributes":true,
+            "enabled":true
         },
 		{
-            "id":2,
-            "serviceId":"http://yahoo.com",
+            "id":3,
+            "serviceId":"http://yahoo.com/",
             "name":"YAHOO",            
 			"ignoreAttributes":true,
-			"enabled":true            
+			"enabled":true
         }
     ]
 }
