--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,9 @@
         <jersey.version>1.17.1</jersey.version>
         <jaxrs.version>1.1.1</jaxrs.version>
         <spring.version>3.2.4.RELEASE</spring.version>
+        <joda-time.version>2.3</joda-time.version>
+        <jedis.version>2.1.0</jedis.version>
+        <spring.data.redis.version>1.1.0.RELEASE</spring.data.redis.version>
     </properties>
 
     <reporting>
@@ -449,6 +452,28 @@
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
             <version>2.1.3</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <!-- Dependencies for Redis stats components -->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>${joda-time.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>${spring.data.redis.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>${jedis.version}</version>
             <scope>compile</scope>
         </dependency>
 		
