--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,6 @@
     <properties>
         <github.global.server>github</github.global.server>
         <jdk.version>1.6</jdk.version>
-        <groovy.provider.selection>1.7</groovy.provider.selection>
         <cas.version>3.5.2</cas.version>
         <servlet.version>2.5</servlet.version>
         <junit.version>4.11</junit.version>
@@ -85,6 +84,7 @@
         <joda-time.version>2.3</joda-time.version>
         <jedis.version>2.1.0</jedis.version>
         <spring.data.redis.version>1.1.0.RELEASE</spring.data.redis.version>
+        <groovy.version>2.1.5</groovy.version>
     </properties>
 
     <reporting>
@@ -139,6 +139,7 @@
         </testResources>
 
         <plugins>
+  
             <plugin>
                 <groupId>com.github.github</groupId>
                 <artifactId>site-maven-plugin</artifactId>
@@ -171,51 +172,37 @@
                     <dependency>
                         <groupId>org.codehaus.groovy</groupId>
                         <artifactId>groovy-eclipse-compiler</artifactId>
-                        <version>2.7.0-01</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-
-
-            <!-- Plugin to run Spock tests -->
-            <plugin>
-                <groupId>org.codehaus.gmaven</groupId>
-                <artifactId>gmaven-plugin</artifactId>
-                <version>1.3</version>
-                <configuration>
-                    <providerSelection>${groovy.provider.selection}</providerSelection>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.codehaus.gmaven.runtime</groupId>
-                        <artifactId>gmaven-runtime-1.7</artifactId>
-                        <version>1.3</version>
-                        <exclusions>
-                            <exclusion>
-                                <groupId>org.codehaus.groovy</groupId>
-                                <artifactId>groovy-all</artifactId>
-                            </exclusion>
-                        </exclusions>
+                        <version>2.8.0-01</version>
                     </dependency>
                     <dependency>
                         <groupId>org.codehaus.groovy</groupId>
-                        <artifactId>groovy-all</artifactId>
-                        <version>2.0.6</version>
+                        <artifactId>groovy-eclipse-batch</artifactId>
+                        <version>2.1.5-03</version>
                     </dependency>
                 </dependencies>
+            </plugin> 
+            
+            <!-- 
+            <plugin>
+                <groupId>org.spockframework</groupId>
+                <artifactId>spock-maven</artifactId>
+                <version>${spock.version}</version>
+                <executions>
+                
+                    <execution>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>find-specs</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
-
+             -->
+                         
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12.1</version>
+                <version>2.16</version>
                 <configuration>
                     <includes>
                         <include>**/*Tests.java</include>
@@ -451,7 +438,7 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <version>2.1.3</version>
+            <version>${groovy.version}</version>
             <scope>compile</scope>
         </dependency>
 
@@ -490,8 +477,14 @@
             <artifactId>spock-core</artifactId>
             <version>${spock.version}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.codehaus.groovy</groupId>
+                    <artifactId>groovy-all</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
-
+            
         <dependency>
             <groupId>xml-apis</groupId>
             <artifactId>xml-apis</artifactId>
