--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
         <jedis.version>2.1.0</jedis.version>
         <spring.data.redis.version>1.1.0.RELEASE</spring.data.redis.version>
         <groovy.version>2.1.5</groovy.version>
+        <apache.httpclient.version>4.2.6</apache.httpclient.version>
     </properties>
 
     <reporting>
@@ -464,6 +465,13 @@
             <scope>compile</scope>
         </dependency>
 		
+        <dependency>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpclient</artifactId>
+          <version>${apache.httpclient.version}</version>
+          <scope>compile</scope>
+        </dependency>
+
         <!-- Dependencies for testing -->
         <dependency>
             <groupId>junit</groupId>
