--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,7 @@
 gradle.version=1.10
+
+cas.version=3.5.2
+jackson.version=2.2.2
+spring.version=3.2.4.RELEASE
+slf4j.version=1.7.5
+shiro.version=1.2.2
