--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,8 @@
 gradle.version=1.10
 
+group=net.unicon.cas
+version=1.98.1
+
 cas.version=3.5.2
 jackson.version=2.2.2
 spring.version=3.2.4.RELEASE
