--- a/support/build.gradle
+++ b/support/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: "java"
 
+group="net.unicon.cas.addons"
+
 dependencies {
     compile "org.springframework:spring-context:${project."spring.version"}"
     compile "org.slf4j:slf4j-api:${project."slf4j.version"}"
