--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <description>A collection of useful Jasig CAS SSO Server add-ons and extensions.</description>
     <groupId>net.unicon.cas</groupId>
     <artifactId>cas-addons</artifactId>
-    <version>1.15</version>
+    <version>1.16-SNAPSHOT</version>
     <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
     <inceptionYear>2012</inceptionYear>
